src/components/table/bb-data-table.css
.dataTable-root .card > .card-body {
  padding: 0;
}
.dataTable-root thead th:last-child,
.dataTable-root tbody td:last-child {
  width: 12% !important;
}
.dataTables_scrollHead {
  margin-top: -1px;
}
.dataTable-root .card {
  overflow: hidden;
  border-radius: 8px;
  border: 1px solid #b7b7b7;
}

.dataTable-root .dataTables_info,
.dataTable-root .dataTables_length {
  display: inline-block;
  margin-right: 4px;
}
.dataTable-root .dataTables_paginate {
  margin-top: 10px !important;
}
.dataTable-root .dataTables_paginate .pagination .paginate_button.active a {
  background-color: #5e5e5e;
  border-color: #5e5e5e;
  outline: none;
}

.page-link {
  color: #4d4d4d;
}

@media only screen and (max-width: 320px) {
  .page-link {
    color: #4d4d4d;
    padding-right: 10px;
    padding-left: 10px;
    font-size: 12px;
  }
}
.page-item.disabled .page-link {
  color: #a3a3a3;
}

.dataTable-root table.dataTable {
  margin-top: 0px !important;
  margin-bottom: 0px !important;
}

.dataTable-root table.dataTable thead {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-size: 16px;
  font-weight: 500;
  background-color: #5e5e5e;
  color: #ffffff;
  /* white-space: nowrap; */
}

.dataTable-root table.dataTable th {
  vertical-align: top;
  word-break: break-word;
}
@media only screen and (max-width: 768px) {
  .dataTable-root table.dataTable thead {
    font-size: 13px;
  }
}
.dataTable-root table.dataTable tbody {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-size: 15px;
  font-weight: normal;
  color: #333333;
}
@media only screen and (max-width: 768px) {
  .dataTable-root table.dataTable tbody {
    font-size: 13px;
  }
}
.dataTable-root table.dataTable td {
  vertical-align: middle;
}

/* .dataTable-root table.dataTable thead > tr > th:nth-child(1) {
  color: #333333;
} */

/* .dataTable-root table.dataTable thead > tr > th:last-child {
  padding-right: 50px;
} */

.dataTable-root .select-checkbox {
  min-width: 78px;
  vertical-align: middle !important;
}
@media (min-width: 481px) {
  .dataTable-root .select-checkbox {
    min-width: 50px !important;
    width: 50px !important;
  }
}
@media (min-width: 1280px) {
  .dataTable-root .select-checkbox {
    min-width: 45px !important;
  }
}
.dataTable-root .select-checkbox .row-handle {
  margin-left: 5px;
  cursor: move;
}
.dataTable-root .table-row-action {
  width: 100px;
  text-align: center;
}

.dataTable-root .table-row-action-item {
  color: #3e40ae;
}

.dataTables_processing {
  display: none !important;
}

.fa-edit {
  color: #3e40ae;
}

.fa-eye {
  color: #3e40ae;
}

.fa-trash {
  color: #3e40ae;
}

table.dataTable > tbody > tr.child ul.dtr-details {
  /* display: inline-block; */
  list-style-type: none;
  margin: 0;
  padding: 0;
}
table.dataTable > tbody > tr.child ul.dtr-details > li {
  padding: 0.5em 20px;
}
table.dataTable > tbody > tr.child span.dtr-title {
  display: inline-flex;
  min-width: 75px;
  width: 40%;
  font-weight: bold;
}
table.dataTable > tbody > tr.child span.dtr-data {
  display: inline-flex;
  width: 58%;
  align-items: center;
}
.table th,
.table td {
  border: none;
}

.table-striped tbody tr:nth-of-type(odd) {
  background-color: rgb(245, 245, 245);
}

.cstm-col-width {
  min-width: 66px !important;
  word-break: break-all;
}

.custom-col-width {
  min-width: 86px !important;
  word-break: break-all;
}

.wo-checkbox {
  margin-left: auto;
  min-width: 26px !important;
  max-width: 26px !important;
}

.wo-checkbox::before {
  left: 11px !important;
}

@media (min-width: 768px) {
  .wo-checkbox {
    width: 10px !important;
    min-width: 10px !important;
    max-width: 10px !important;
  }
}

@media (min-width: 321px) and (max-width: 390px) {
  .cstm-col-width {
    min-width: 88px !important;
    width: 40% !important;
  }
}
@media (min-width: 391px) and (max-width: 410px) {
  .cstm-col-width {
    min-width: 105px !important;
    max-width: 200px !important;
  }
}
@media (min-width: 411px) and (max-width: 420px) {
  .cstm-col-width {
    min-width: 116px !important;
    max-width: 200px !important;
  }
}

@media (min-width: 421px) and (max-width: 450px) {
  .cstm-col-width {
    min-width: 133px !important;
    max-width: 200px !important;
  }
}

@media (min-width: 451px) and (max-width: 460px) {
  .cstm-col-width {
    min-width: 135px !important;
    max-width: 200px !important;
  }
}
@media (min-width: 461px) and (max-width: 480px) {
  .cstm-col-width {
    min-width: 146px !important;
    max-width: 200px !important;
  }
}

@media (min-width: 321px) and (max-width: 390px) {
  .custom-col-width {
    min-width: 115px !important;
    width: 40% !important;
  }
}
@media (min-width: 391px) and (max-width: 410px) {
  .custom-col-width {
    min-width: 134px !important;
    max-width: 200px !important;
  }
}
@media (min-width: 411px) and (max-width: 420px) {
  .custom-col-width {
    min-width: 138px !important;
    max-width: 200px !important;
  }
}

@media (min-width: 421px) and (max-width: 450px) {
  .custom-col-width {
    min-width: 150px !important;
    max-width: 200px !important;
  }
}

@media (min-width: 451px) and (max-width: 460px) {
  .custom-col-width {
    min-width: 162px !important;
    max-width: 200px !important;
  }
}
@media (min-width: 461px) and (max-width: 480px) {
  .custom-col-width {
    min-width: 166px !important;
    max-width: 200px !important;
  }
}

@media (min-width: 576px) {
  .select-checkbox-all {
    margin: 0;
    padding: 2px;
  }
  .cstm-col-width {
    min-width: 100px;
    max-width: 280px !important;
  }
  .dataTable-root thead th:last-child,
  .dataTable-root tbody td:last-child {
    text-align: center;
  }
}
table.dataTable.dtr-inline.collapsed > tbody > tr > td.dtr-control,
table.dataTable.dtr-inline.collapsed > tbody > tr > th.dtr-control {
  position: relative;
  cursor: pointer;
}
table.dataTable.dtr-inline.collapsed > tbody > tr > td.dtr-control:before,
table.dataTable.dtr-inline.collapsed > tbody > tr > th.dtr-control:before {
  top: 50%;
  left: 62px;
  height: 1em;
  width: 1em;
  margin-top: -8px;
  display: block;
  font-weight: bold;
  position: absolute;
  color: white;
  border: 0.15em solid #b7b7b7;
  border-radius: 1em;
  box-shadow: 0 0 0.2em #b7b7b7;
  box-sizing: content-box;
  text-align: center;
  text-indent: 0 !important;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  line-height: 0.9em;
  content: "\002B";
  background-color: #b7b7b7;
}
table.dataTable.dtr-inline.collapsed
  > tbody
  > tr.parent
  > td.dtr-control:before,
table.dataTable.dtr-inline.collapsed
  > tbody
  > tr.parent
  > th.dtr-control:before {
  content: "\2212";
  background-color: #b7b7b7;
}
table.dataTable > tbody > tr.child {
  background-color: hsl(0, 0%, 90%);
  padding: 0.2em;
}

table.dataTable thead .sorting,
table.dataTable thead .sorting_asc,
table.dataTable thead .sorting_desc,
table.dataTable thead .sorting_asc_disabled,
table.dataTable thead .sorting_desc_disabled {
  cursor: pointer;
  *cursor: hand;
  background-repeat: no-repeat;
  background-position: center right;
  margin-left: 12px;
}
table.dataTable thead .sorting {
  background-position: 100% 30%;
  background-image: url("../../assets/icons/sort-disable.svg");
}
table.dataTable thead .sorting_asc {
  background-position: 100% 30%;
  background-image: url("../../assets/icons/sort-ascending.svg") !important;
}
table.dataTable thead .sorting_desc {
  background-position: 100% 30%;
  background-image: url("../../assets/icons/sort-descending.svg") !important;
}

table.dataTable thead th.sorting:after,
table.dataTable thead th.sorting_asc:after,
table.dataTable thead th.sorting_desc:after {
  position: absolute !important;
  top: 12px !important;
  right: 8px !important;
  display: block !important;
  font-family: FontAwesome !important;
}
table.dataTable thead .sorting:before,
table.dataTable thead .sorting_asc:before,
table.dataTable thead .sorting_desc:before,
table.dataTable thead .sorting_asc_disabled:before,
table.dataTable thead .sorting_desc_disabled:before {
  content: "" !important;
}
table.dataTable thead .sorting:after,
table.dataTable thead .sorting_asc:after,
table.dataTable thead .sorting_desc:after,
table.dataTable thead .sorting_asc_disabled:after,
table.dataTable thead .sorting_desc_disabled:after {
  content: "" !important;
}
.table-sm th {
  padding: 0.4rem 0.3rem;
}

